upload all files

--- a/products/blackening/index.html
+++ b/products/blackening/index.html
@@ -8,7 +8,7 @@
   <title id="metaTitle">น้ำยารมดำโลหะแบบจุ่มเย็น สำหรับทองเหลือง ทองแดง เหล็ก ซิงค์ อลูมิเนียม | Baume Chemical</title>
   <meta name="description" id="metaDesc" content="โซลูชันรมดำโลหะแบบจุ่มเย็น ครอบคลุม Brass Copper Steel Zinc Aluminium สีดำสม่ำเสมอ ลดแสงสะท้อน เสริมการป้องกันการกัดกร่อน พร้อมแนวทางใช้งานจริง.">
   <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-  <link rel="canonical" href="https://www.baumechemical.com/products/blackening/">
+  <link rel="canonical" href="https://www.baumechemical.com/products/blackening/index.html">
   <meta name="theme-color" content="#2c5e4e">
   <meta name="format-detection" content="telephone=no">
 
@@ -25,7 +25,7 @@
   <meta property="og:locale" id="ogLocale" content="th_TH">
   <meta property="og:title" id="ogTitle" content="น้ำยารมดำโลหะแบบจุ่มเย็น — Blackening Solutions | Baume Chemical">
   <meta property="og:description" id="ogDesc" content="Blackening สำหรับ Brass Copper Steel Zinc Aluminium สีดำสม่ำเสมอ ลดแสงสะท้อน เสริมการป้องกันการกัดกร่อน.">
-  <meta property="og:url" content="https://www.baumechemical.com/products/blackening/">
+  <meta property="og:url" content="https://www.baumechemical.com/products/blackening/index.html">
   <meta property="og:image" content="https://img2.pic.in.th/pic/thumbnail85e2847383c30223.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
@@ -66,7 +66,7 @@
     "@type":"CollectionPage",
     "inLanguage":"th",
     "name":"Blackening — น้ำยารมดำโลหะแบบจุ่มเย็น",
-    "url":"https://www.baumechemical.com/products/blackening/",
+    "url":"https://www.baumechemical.com/products/blackening/index.html",
     "description":"น้ำยารมดำและสารทำพาทินาสำหรับงานอุตสาหกรรมและตกแต่ง ครอบคลุมหลายวัสดุ พร้อมแนวทางการใช้งานจริง",
     "isPartOf":{"@type":"WebSite","name":"Baume Chemical","url":"https://www.baumechemical.com/"},
     "mainEntity":{
