--- a/products/passivation/index.html
+++ b/products/passivation/index.html
@@ -8,7 +8,7 @@
   <title id="metaTitle">โครเมตบนซิงค์ (Passivation) Cr3/Cr6 สีฟ้า/ขาว ดำ รุ้ง เหลือง Olive Drab | Baume Chemical</title>
   <meta name="description" id="metaDesc" content="โครเมตบนซิงค์เพื่อเพิ่มความทนการกัดกร่อนและการยึดเกาะสี มีทั้ง Cr3/Cr6 หลายเฉดสี เช่น ฟ้า/ขาว ดำ รุ้ง เหลือง และ Olive Drab พร้อมแนวทางใช้งานจริง.">
   <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-  <link rel="canonical" href="https://www.baumechemical.com/products/passivation/">
+  <link rel="canonical" href="https://www.baumechemical.com/products/passivation/index.html">
   <meta name="theme-color" content="#2c5e4e">
   <meta name="format-detection" content="telephone=no">
 
@@ -22,7 +22,7 @@
   <!-- Open Graph / Twitter (ใช้รูปเดิม) -->
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:url" content="https://www.baumechemical.com/products/passivation/">
+  <meta property="og:url" content="https://www.baumechemical.com/products/passivation/index.html">
   <meta property="og:locale" id="ogLocale" content="th_TH">
   <meta property="og:title" id="ogTitle" content="โครเมตบนซิงค์ (Passivation) — Cr3/Cr6 หลายเฉดสี | Baume Chemical">
   <meta property="og:description" id="ogDesc" content="Passivation บนซิงค์เพิ่มความทนการกัดกร่อนและการยึดเกาะสี มีทั้ง Cr3/Cr6 สีฟ้า/ขาว ดำ รุ้ง เหลือง และ เขียวทหาร">
@@ -65,7 +65,7 @@
     "@type":"CollectionPage",
     "inLanguage":"th",
     "name":"Passivation — โครเมตบนซิงค์",
-    "url":"https://www.baumechemical.com/products/passivation/",
+    "url":"https://www.baumechemical.com/products/passivation/index.html",
     "description":"Chromate conversion on zinc (Cr3/Cr6) with multiple finishes to enhance corrosion resistance and paint adhesion.",
     "isPartOf":{"@type":"WebSite","name":"Baume Chemical","url":"https://www.baumechemical.com/"},
     "mainEntity":{
@@ -104,7 +104,7 @@
     "itemListElement":[
       {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
       {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products/"},
-      {"@type":"ListItem","position":3,"name":"Passivation","item":"https://www.baumechemical.com/products/passivation/"}
+      {"@type":"ListItem","position":3,"name":"Passivation","item":"https://www.baumechemical.com/products/passivation/index.html"}
     ]
   }
   </script>
