--- a/products/platingcoating/brassplating/index.html
+++ b/products/platingcoating/brassplating/index.html
@@ -8,7 +8,7 @@
   <title id="metaTitle">น้ำยาชุบเหลืองแดง (Brass Plating Solutions) | Baume Chemical</title>
   <meta name="description" id="metaDesc" content="โซลูชันชุบเหลือง (Brass): Dark Yellow / Greenish Yellow / Imitation Gold (Cyanide-Free) สำหรับงาน Rack/Barrel เน้นโทนสีทอง ความเงา การยึดเกาะ และการทนกัดกร่อน พร้อมทีมเทคนิคดูแลหน้างาน.">
   <meta name="robots" content="index,follow,max-image-preview:large">
-  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/brassplating/">
+  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/brassplating/index.html">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
   <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48.png">
@@ -25,7 +25,7 @@
   <meta property="og:locale:alternate" content="en_US">
   <meta property="og:title" id="ogTitle" content="Brass Plating Solutions | Baume Chemical">
   <meta property="og:description" id="ogDesc" content="Dark Yellow / Greenish Yellow / Cyanide-Free Imitation Gold for rack and barrel—gold-like appearance with good adhesion and corrosion resistance.">
-  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/brassplating/">
+  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/brassplating/index.html">
   <meta property="og:image" content="https://i.imgur.com/ikv1kfr.jpeg">
   <meta property="og:image:alt" content="Brass plating bath with rich golden finish">
   <meta name="twitter:card" content="summary_large_image">
@@ -65,14 +65,14 @@
 
   <!-- JSON-LD: CollectionPage -->
   <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"CollectionPage","name":"Brass Plating Solutions","inLanguage":"th","url":"https://www.baumechemical.com/products/platingcoating/brassplating/","description":"Dark Yellow Brass, Greenish Yellow Brass, and Cyanide-free Imitation Gold systems for rack and barrel plating."}
+  {"@context":"https://schema.org","@type":"CollectionPage","name":"Brass Plating Solutions","inLanguage":"th","url":"https://www.baumechemical.com/products/platingcoating/brassplating/index.html","description":"Dark Yellow Brass, Greenish Yellow Brass, and Cyanide-free Imitation Gold systems for rack and barrel plating."}
   </script>
   <!-- JSON-LD: Breadcrumb -->
   <script type="application/ld+json">
   {"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[
     {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
     {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products.html"},
-    {"@type":"ListItem","position":3,"name":"Brass Plating Solutions","item":"https://www.baumechemical.com/products/platingcoating/brassplating/"}
+    {"@type":"ListItem","position":3,"name":"Brass Plating Solutions","item":"https://www.baumechemical.com/products/platingcoating/brassplating/index.html"}
   ]}
   </script>
   <!-- JSON-LD: ItemList (anchors) -->
