--- a/products/platingcoating/copperplating/index.html
+++ b/products/platingcoating/copperplating/index.html
@@ -8,7 +8,7 @@
   <title id="metaTitle">น้ำยาชุบทองแดง (Copper Plating Solutions) | Baume Chemical</title>
   <meta name="description" id="metaDesc" content="โซลูชันชุบทองแดงสำหรับงานอุตสาหกรรม: Alkaline Cyanide / Alkaline Non-Cyanide / Acid Copper ครอบคลุมงานถังแขวน–ถังกลิ้ง เน้นการยึดเกาะ การนำไฟฟ้า ความเงา และการกระจายผิว พร้อมทีมเทคนิคดูหน้างาน.">
   <meta name="robots" content="index,follow,max-image-preview:large">
-  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/copperplating/">
+  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/copperplating/index.html">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
@@ -23,7 +23,7 @@
   <meta property="og:locale:alternate" content="en_US">
   <meta property="og:title" id="ogTitle" content="น้ำยาชุบทองแดง (Copper Plating Solutions) | Baume Chemical">
   <meta property="og:description" id="ogDesc" content="Alkaline Cyanide / Alkaline Non-Cyanide / Acid Copper สำหรับ Rack/Barrel เพื่อการยึดเกาะ การนำไฟฟ้า และผิวเงาสม่ำเสมอ.">
-  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/copperplating/">
+  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/copperplating/index.html">
   <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail-2240c35936a6eea27.jpg">
   <meta property="og:image:alt" content="Copper plating bath with bright copper surface">
   <meta name="twitter:card" content="summary_large_image">
@@ -33,9 +33,9 @@
   <!-- JSON-LD: Organization -->
   <script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","name":"Baume Chemical","url":"https://www.baumechemical.com/","logo":"https://www.baumechemical.com/assets/logo.png","sameAs":["https://line.me/ti/p/~baumechemical"]}</script>
   <!-- JSON-LD: CollectionPage -->
-  <script type="application/ld+json">{"@context":"https://schema.org","@type":"CollectionPage","name":"Copper Plating Solutions","inLanguage":"th","url":"https://www.baumechemical.com/products/platingcoating/copperplating/","description":"Alkaline Cyanide, Alkaline Non-Cyanide, and Acid Copper plating systems for rack and barrel lines."}</script>
+  <script type="application/ld+json">{"@context":"https://schema.org","@type":"CollectionPage","name":"Copper Plating Solutions","inLanguage":"th","url":"https://www.baumechemical.com/products/platingcoating/copperplating/index.html","description":"Alkaline Cyanide, Alkaline Non-Cyanide, and Acid Copper plating systems for rack and barrel lines."}</script>
   <!-- JSON-LD: Breadcrumb -->
-  <script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},{"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products.html"},{"@type":"ListItem","position":3,"name":"Copper Plating Solutions","item":"https://www.baumechemical.com/products/platingcoating/copperplating/"}]}</script>
+  <script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},{"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products.html"},{"@type":"ListItem","position":3,"name":"Copper Plating Solutions","item":"https://www.baumechemical.com/products/platingcoating/copperplating/index.html"}]}</script>
   <!-- JSON-LD: ItemList (anchors) -->
   <script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Copper Systems","itemListOrder":"https://schema.org/ItemListOrderAscending","itemListElement":[{"@type":"ListItem","position":1,"url":"#cyanide-cu"},{"@type":"ListItem","position":2,"url":"#noncyanide-cu"},{"@type":"ListItem","position":3,"url":"#acid-cu"}]}</script>
 
