--- a/products/platingcoating/zincplating/index.html
+++ b/products/platingcoating/zincplating/index.html
@@ -8,7 +8,7 @@
   <title data-i18n-key="meta_title">น้ำยาชุบซิงค์หรือสังกะสี (Zinc Plating Solutions) | Baume Chemical</title>
   <meta name="description" content="โซลูชันน้ำยาชุบซิงค์หรือสังกะสีสำหรับงานอุตสาหกรรม: Cyanide / Acid (Ammonium) / Non-Cyanide ครอบคลุมทั้งถังกลิ้งและถังแขวน เงาดี กระจายผิวเยี่ยม ทนการกัดกร่อน พร้อมทีมเทคนิคดูแลหน้างานจริง.">
   <meta name="robots" content="index,follow,max-image-preview:large">
-  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/zincplating/">
+  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/zincplating/index.html">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
@@ -25,15 +25,15 @@
   <meta property="og:locale:alternate" content="en_US">
   <meta property="og:title" content="น้ำยาชุบซิงค์หรือสังกะสี (Zinc Plating Solutions) | Baume Chemical">
   <meta property="og:description" content="Cyanide / Acid (Ammonium) / Non-Cyanide สำหรับงานถังแขวนและถังกลิ้ง เงาดี กระจายผิวเยี่ยม ทนการกัดกร่อน.">
-  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/zincplating/">
+  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/zincplating/index.html">
   <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail-8.jpg">
   <meta property="og:image:alt" content="Zinc plating bath with bright finish">
   <meta name="twitter:card" content="summary_large_image">
 
   <!-- JSON-LD (compressed) -->
   <script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","name":"Baume Chemical","url":"https://www.baumechemical.com/","logo":"https://www.baumechemical.com/assets/logo.png","sameAs":["https://line.me/ti/p/~baumechemical"]}</script>
-  <script type="application/ld+json">{"@context":"https://schema.org","@type":"CollectionPage","name":"Zinc Plating Solutions","inLanguage":"th","url":"https://www.baumechemical.com/products/platingcoating/zincplating/","description":"Cyanide, Ammonium Acid, and Cyanide-free zinc plating solutions for rack and barrel with strong brightness and distribution."}</script>
-  <script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},{"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products.html"},{"@type":"ListItem","position":3,"name":"Zinc Plating Solutions","item":"https://www.baumechemical.com/products/platingcoating/zincplating/"}]}</script>
+  <script type="application/ld+json">{"@context":"https://schema.org","@type":"CollectionPage","name":"Zinc Plating Solutions","inLanguage":"th","url":"https://www.baumechemical.com/products/platingcoating/zincplating/index.html","description":"Cyanide, Ammonium Acid, and Cyanide-free zinc plating solutions for rack and barrel with strong brightness and distribution."}</script>
+  <script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},{"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products.html"},{"@type":"ListItem","position":3,"name":"Zinc Plating Solutions","item":"https://www.baumechemical.com/products/platingcoating/zincplating/index.html"}]}</script>
   <script type="application/ld+json">{"@context":"https://schema.org","@type":"ItemList","name":"Zinc Plating Types","itemListOrder":"https://schema.org/ItemListOrderAscending","itemListElement":[{"@type":"ListItem","position":1,"url":"#cyanide"},{"@type":"ListItem","position":2,"url":"#ammonium-acid"},{"@type":"ListItem","position":3,"url":"#non-cyanide"}]}</script>
 
   <!-- Fonts -->
