--- a/products/polishing/index.html
+++ b/products/polishing/index.html
@@ -8,7 +8,7 @@
   <title id="metaTitle">น้ำยากัดเงา/ขัดเงาโลหะ (Polishing) | สเตนเลส ทองเหลือง อะลูมิเนียม เหล็ก สังกะสี ตะกั่ว | Baume Chemical</title>
   <meta name="description" id="metaDesc" content="สารเคมีกัดเงา/ขัดเงาโลหะสำหรับสเตนเลส ทองเหลือง อะลูมิเนียม เหล็ก สังกะสี และตะกั่ว ให้เงากระจก ลดคราบ ปรับสูตรและกระบวนการให้เหมาะกับไลน์ผลิต พร้อมคำปรึกษาผู้เชี่ยวชาญ.">
   <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-  <link rel="canonical" href="https://www.baumechemical.com/products/polishing/">
+  <link rel="canonical" href="https://www.baumechemical.com/products/polishing/index.html">
   <meta name="theme-color" content="#2c5e4e">
   <meta name="format-detection" content="telephone=no">
 
@@ -22,7 +22,7 @@
   <!-- Open Graph / Twitter (ใช้รูปเดิมจาก pic.in.th) -->
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:url" content="https://www.baumechemical.com/products/polishing/">
+  <meta property="og:url" content="https://www.baumechemical.com/products/polishing/index.html">
   <meta property="og:locale" id="ogLocale" content="th_TH">
   <meta property="og:title" id="ogTitle" content="Polishing — กัดเงา/ขัดเงาโลหะ เงากระจก | Baume Chemical">
   <meta property="og:description" id="ogDesc" content="สารเคมีกัดเงา/ขัดเงาโลหะสำหรับงานอุตสาหกรรมและตกแต่ง เงากระจก ลดคราบ พร้อมแนวทางใช้งานจริง.">
@@ -64,7 +64,7 @@
     "@type":"CollectionPage",
     "inLanguage":"th",
     "name":"Polishing — น้ำยากัดเงา/ขัดเงาโลหะ",
-    "url":"https://www.baumechemical.com/products/polishing/",
+    "url":"https://www.baumechemical.com/products/polishing/index.html",
     "description":"สารเคมีกัดเงา/ขัดเงาโลหะสำหรับสเตนเลส ทองเหลือง อะลูมิเนียม เหล็ก สังกะสี และตะกั่ว",
     "isPartOf":{"@type":"WebSite","name":"Baume Chemical","url":"https://www.baumechemical.com/"},
     "mainEntity":{
@@ -97,7 +97,7 @@
     "itemListElement":[
       {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
       {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products/"},
-      {"@type":"ListItem","position":3,"name":"Polishing","item":"https://www.baumechemical.com/products/polishing/"}
+      {"@type":"ListItem","position":3,"name":"Polishing","item":"https://www.baumechemical.com/products/polishing/index.html"}
     ]
   }
   </script>
