--- a/products/strippers/index.html
+++ b/products/strippers/index.html
@@ -8,7 +8,7 @@
   <title id="metaTitle">น้ำยาลอกผิว/ลอกชุบ (Strippers) | ลอกชั้นชุบ/ออกไซด์/สี แบบควบคุมเฉพาะชั้น | Baume Chemical</title>
   <meta name="description" id="metaDesc" content="น้ำยาลอกชั้นชุบ ออกไซด์ และสี สำหรับเหล็ก ทองแดง ทองเหลือง ฯลฯ — ควบคุมง่าย ลอกเฉพาะชั้นเคลือบ ปกป้องเนื้อโลหะ เตรียมผิวสำหรับชุบ พ่นสี หรือเชื่อม.">
   <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-  <link rel="canonical" href="https://www.baumechemical.com/products/strippers/">
+  <link rel="canonical" href="https://www.baumechemical.com/products/strippers/index.html">
   <meta name="theme-color" content="#2c5e4e">
   <meta name="format-detection" content="telephone=no">
 
@@ -22,7 +22,7 @@
   <!-- Open Graph / Twitter (ใช้รูปเดิมจาก pic.in.th) -->
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:url" content="https://www.baumechemical.com/products/strippers/">
+  <meta property="og:url" content="https://www.baumechemical.com/products/strippers/index.html">
   <meta property="og:locale" id="ogLocale" content="th_TH">
   <meta property="og:title" id="ogTitle" content="Strippers — ลอกชั้นชุบ/ออกไซด์/สี แบบควบคุมเฉพาะชั้น | Baume Chemical">
   <meta property="og:description" id="ogDesc" content="ลอกเฉพาะชั้นเคลือบ ปกป้องเนื้อโลหะ เตรียมผิวสำหรับการชุบใหม่ พ่นสี หรือเชื่อม.">
@@ -64,7 +64,7 @@
     "@type":"CollectionPage",
     "inLanguage":"th",
     "name":"Strippers — น้ำยาลอกผิว/ลอกชุบ",
-    "url":"https://www.baumechemical.com/products/strippers/",
+    "url":"https://www.baumechemical.com/products/strippers/index.html",
     "description":"น้ำยาลอกชั้นชุบ/ออกไซด์/สี สำหรับโลหะหลายชนิด เหมาะกับงานเตรียมผิวก่อนชุบ พ่นสี หรือเชื่อม",
     "isPartOf":{"@type":"WebSite","name":"Baume Chemical","url":"https://www.baumechemical.com/"},
     "mainEntity":{
@@ -93,7 +93,7 @@
     "itemListElement":[
       {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
       {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products/"},
-      {"@type":"ListItem","position":3,"name":"Strippers","item":"https://www.baumechemical.com/products/strippers/"}
+      {"@type":"ListItem","position":3,"name":"Strippers","item":"https://www.baumechemical.com/products/strippers/index.html"}
     ]
   }
   </script>
