--- a/products/platingcoating/electrophoreticlacquer/index.html
+++ b/products/platingcoating/electrophoreticlacquer/index.html
@@ -8,7 +8,7 @@
   <title data-i18n-key="meta_title">น้ำยาแลคเกอร์ไฟฟ้า (Electrophoretic Lacquer / E-coat) | Baume Chemical</title>
   <meta name="description" content="โซลูชันแลคเกอร์ไฟฟ้า (E-coat) สำหรับงานอุตสาหกรรม: Acrylic และ Polyurethane เพิ่มความทนกัดกร่อน ป้องกันสนิม และความเงา โดยไม่เปลี่ยนคุณสมบัติวัสดุต้นฉบับ เหมาะกับเครื่องใช้ไฟฟ้า ชิ้นส่วนอุตสาหกรรม และยานยนต์">
   <meta name="robots" content="index,follow,max-image-preview:large">
-  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/">
+  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/index.html">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
@@ -23,7 +23,7 @@
   <meta property="og:locale:alternate" content="en_US">
   <meta property="og:title" content="Electrophoretic Lacquer (E-coat) | Baume Chemical">
   <meta property="og:description" content="Acrylic & Polyurethane E-coat: durable, corrosion-resistant, glossy protective finishes for industrial parts.">
-  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/">
+  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/index.html">
   <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/image0-174d2122a9ed67635.jpeg">
   <meta property="og:image:alt" content="Electrophoretic lacquer (E-coat) line on metal parts">
   <meta name="twitter:card" content="summary_large_image">
@@ -47,7 +47,7 @@
     "name":"Electrophoretic Lacquer (E-coat)",
     "alternateName":["Baume Chemical","Baume"],
     "inLanguage":"th",
-    "url":"https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/",
+    "url":"https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/index.html",
     "description":"Acrylic and Polyurethane electrophoretic lacquer systems for protective, glossy, corrosion-resistant finishes."
   }
   </script>
@@ -59,7 +59,7 @@
     "itemListElement":[
       {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
       {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products.html"},
-      {"@type":"ListItem","position":3,"name":"Electrophoretic Lacquer","item":"https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/"}
+      {"@type":"ListItem","position":3,"name":"Electrophoretic Lacquer","item":"https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/index.html"}
     ]
   }
   </script>
