--- a/products/platingcoating/index.html
+++ b/products/platingcoating/index.html
@@ -8,7 +8,7 @@
   <title id="metaTitle">น้ำยาชุบและเคลือบผิวโลหะ (Plating & Coating) | Zinc Nickel Copper Brass แลคเกอร์ไฟฟ้า ไวท์บรอนซ์ | Baume Chemical</title>
   <meta name="description" id="metaDesc" content="น้ำยาชุบและเคลือบผิวโลหะสำหรับงานอุตสาหกรรม ครอบคลุม Zinc Nickel Copper Brass แลคเกอร์ไฟฟ้า และไวท์บรอนซ์แบบไม่ใช้ไซยาไนด์ พร้อมคำปรึกษาและโซลูชันตามไลน์ผลิต.">
   <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/">
+  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/index.html">
   <meta name="theme-color" content="#2c5e4e">
   <meta name="format-detection" content="telephone=no">
 
@@ -22,7 +22,7 @@
   <!-- Open Graph / Twitter (ใช้รูปเดิมจาก Imgur) -->
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/">
+  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/index.html">
   <meta property="og:locale" id="ogLocale" content="th_TH">
   <meta property="og:title" id="ogTitle" content="Plating & Coating — Zinc Nickel Copper Brass · Electrolytic Lacquer · White Bronze | Baume Chemical">
   <meta property="og:description" id="ogDesc" content="โซลูชันชุบและเคลือบผิวโลหะครบ พร้อมทีมที่ปรึกษาและแนวทางใช้งานจริง.">
@@ -64,7 +64,7 @@
     "@type":"CollectionPage",
     "inLanguage":"th",
     "name":"Plating & Coating — น้ำยาชุบและเคลือบผิวโลหะ",
-    "url":"https://www.baumechemical.com/products/platingcoating/",
+    "url":"https://www.baumechemical.com/products/platingcoating/index.html",
     "description":"น้ำยาชุบและเคลือบผิวโลหะ: ซิงค์ นิกเกิล ทองแดง ทองเหลือง แลคเกอร์ไฟฟ้า และไวท์บรอนซ์แบบไม่ใช้ไซยาไนด์",
     "isPartOf":{"@type":"WebSite","name":"Baume Chemical","url":"https://www.baumechemical.com/"},
     "mainEntity":{
@@ -99,7 +99,7 @@
     "itemListElement":[
       {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
       {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products/"},
-      {"@type":"ListItem","position":3,"name":"Plating & Coating","item":"https://www.baumechemical.com/products/platingcoating/"}
+      {"@type":"ListItem","position":3,"name":"Plating & Coating","item":"https://www.baumechemical.com/products/platingcoating/index.html"}
     ]
   }
   </script>
