--- a/products/platingcoating/nickelplating/index.html
+++ b/products/platingcoating/nickelplating/index.html
@@ -8,7 +8,7 @@
   <title data-i18n-key="meta_title">น้ำยาชุบนิกเกิล (Nickel Plating Solutions) | Baume Chemical</title>
   <meta name="description" content="โซลูชันชุบนิกเกิลสำหรับงานอุตสาหกรรม: Bright / Black / Satin / Electroless (EN) รวมถึง Chromium และ Hard Chrome ครอบคลุมทั้งถังแขวน-ถังกลิ้ง เน้นความเงา ความทนการสึก และการกระจายผิว พร้อมทีมเทคนิคดูหน้างาน.">
   <meta name="robots" content="index,follow,max-image-preview:large">
-  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/nickelplating/">
+  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/nickelplating/index.html">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180.png">
@@ -24,7 +24,7 @@
   <meta property="og:locale:alternate" content="en_US">
   <meta property="og:title" content="น้ำยาชุบนิกเกิล (Nickel Plating Solutions) | Baume Chemical">
   <meta property="og:description" content="Bright / Black / Satin / EN / Chromium / Hard Chrome สำหรับ Rack/Barrel เงาสูง กระจายผิวเยี่ยม ทนทาน.">
-  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/nickelplating/">
+  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/nickelplating/index.html">
   <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail-3.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
@@ -45,7 +45,7 @@
   "name":"Nickel Plating Solutions",
   "alternateName":["Baume Chemical","Baume"],
   "inLanguage":"th",
-  "url":"https://www.baumechemical.com/products/platingcoating/nickelplating/",
+  "url":"https://www.baumechemical.com/products/platingcoating/nickelplating/index.html",
   "description":"Bright Nickel, Black Nickel, Satin Nickel, Electroless Nickel (EN), plus Chromium and Hard Chrome options for rack and barrel lines."
 }
 </script>
@@ -57,7 +57,7 @@
   "itemListElement":[
     {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
     {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products.html"},
-    {"@type":"ListItem","position":3,"name":"Nickel Plating Solutions","item":"https://www.baumechemical.com/products/platingcoating/nickelplating/"}
+    {"@type":"ListItem","position":3,"name":"Nickel Plating Solutions","item":"https://www.baumechemical.com/products/platingcoating/nickelplating/index.html"}
   ]
 }
 </script>
