--- a/products/pretreatment/index.html
+++ b/products/pretreatment/index.html
@@ -8,7 +8,7 @@
   <title id="metaTitle">กรด/ด่างล้างไขมัน • อัลตร้าโซนิค | Baume Chemical</title>
   <meta name="description" id="metaDesc" content="น้ำยาทำความสะอาดก่อนชุบ: กรดล้างไขมัน ด่างล้างไขมัน ไฟฟ้า และอัลตร้าโซนิค เลือกสูตรให้เหมาะกับวัสดุ/คราบ เพื่อให้ผิวพร้อมชุบ คุณภาพคงที่ ลดของเสีย พร้อมทีมเทคนิคดูแลงานหน้างานจริง.">
   <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-  <link rel="canonical" href="https://www.baumechemical.com/products/pretreatment/">
+  <link rel="canonical" href="https://www.baumechemical.com/products/pretreatment/index.html">
   <meta name="theme-color" content="#2c5e4e">
   <meta name="format-detection" content="telephone=no">
 
@@ -22,7 +22,7 @@
   <!-- Open Graph / Twitter (ใช้รูปเดิมจาก Imgur) -->
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:url" content="https://www.baumechemical.com/products/pretreatment/">
+  <meta property="og:url" content="https://www.baumechemical.com/products/pretreatment/index.html">
   <meta property="og:locale" id="ogLocale" content="th_TH">
   <meta property="og:title" id="ogTitle" content="กรด/ด่างล้างไขมัน ไฟฟ้า • อัลตร้าโซนิค | Baume Chemical">
   <meta property="og:description" id="ogDesc" content="กรด/ด่างล้างไขมัน ไฟฟ้า และอัลตร้าโซนิคสำหรับ Pretreatment ก่อนชุบ ทีมเทคนิคช่วยเลือกสูตรให้เหมาะกับไลน์ของคุณ.">
@@ -64,7 +64,7 @@
     "@type": "CollectionPage",
     "inLanguage": "th",
     "name": "Pretreatment — Degreasing & Ultrasonic",
-    "url": "https://www.baumechemical.com/products/pretreatment/",
+    "url": "https://www.baumechemical.com/products/pretreatment/index.html",
     "description": "หมวด Pretreatment ครอบคลุมกรดล้างไขมัน ด่างล้างไขมัน และอัลตร้าโซนิค พร้อมอัตราส่วนใช้งานจริง.",
     "isPartOf": {"@type": "WebSite","name": "Baume Chemical","url": "https://www.baumechemical.com/"},
     "mainEntity": {
@@ -95,7 +95,7 @@
     "itemListElement":[
       {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
       {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products/"},
-      {"@type":"ListItem","position":3,"name":"Pretreatment","item":"https://www.baumechemical.com/products/pretreatment/"}
+      {"@type":"ListItem","position":3,"name":"Pretreatment","item":"https://www.baumechemical.com/products/pretreatment/index.html"}
     ]
   }
   </script>
