--- a/products/protective/index.html
+++ b/products/protective/index.html
@@ -8,7 +8,7 @@
   <title id="metaTitle">สารเคลือบป้องกันผิว (Anti-Tarnish & Lacquer) | จุ่มเย็น จุ่มร้อน อิเล็กโทร ดีบุก แล็กเกอร์น้ำ | Baume Chemical</title>
   <meta name="description" id="metaDesc" content="สารเคลือบป้องกันหมองและแลคเกอร์ ป้องกันออกซิเดชัน/สีหมอง คงความเงางาม เพิ่มทนซอลต์สเปรย์ ครบไลน์: จุ่มเย็น จุ่มร้อน อิเล็กโทร ป้องกันหมองดีบุก และแลคเกอร์น้ำ พร้อมทีมเทคนิคดูแลงานจริง.">
   <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-  <link rel="canonical" href="https://www.baumechemical.com/products/protective/">
+  <link rel="canonical" href="https://www.baumechemical.com/products/protective/index.html">
   <meta name="theme-color" content="#2c5e4e">
   <meta name="format-detection" content="telephone=no">
 
@@ -22,7 +22,7 @@
   <!-- Open Graph / Twitter (ใช้รูปเดิมจาก pic.in.th) -->
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Baume Chemical">
-  <meta property="og:url" content="https://www.baumechemical.com/products/protective/">
+  <meta property="og:url" content="https://www.baumechemical.com/products/protective/index.html">
   <meta property="og:locale" id="ogLocale" content="th_TH">
   <meta property="og:title" id="ogTitle" content="Anti-Tarnish & Lacquer — ป้องกันหมอง คงความเงางาม | Baume Chemical">
   <meta property="og:description" id="ogDesc" content="โซลูชันป้องกันออกซิเดชัน/สีหมอง เพิ่มทนซอลต์สเปรย์ ใช้ได้ทั้งงานเครื่องประดับและอุตสาหกรรม.">
@@ -64,7 +64,7 @@
     "@type":"CollectionPage",
     "inLanguage":"th",
     "name":"Protective — Anti-Tarnish & Lacquer",
-    "url":"https://www.baumechemical.com/products/protective/",
+    "url":"https://www.baumechemical.com/products/protective/index.html",
     "description":"Anti-tarnish & lacquer coatings to prevent oxidation/discoloration while preserving metal shine for jewelry and industrial parts.",
     "isPartOf":{"@type":"WebSite","name":"Baume Chemical","url":"https://www.baumechemical.com/"},
     "mainEntity":{
@@ -97,7 +97,7 @@
     "itemListElement":[
       {"@type":"ListItem","position":1,"name":"Home","item":"https://www.baumechemical.com/"},
       {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products/"},
-      {"@type":"ListItem","position":3,"name":"Protective","item":"https://www.baumechemical.com/products/protective/"}
+      {"@type":"ListItem","position":3,"name":"Protective","item":"https://www.baumechemical.com/products/protective/index.html"}
     ]
   }
   </script>
