upload all files

--- a/products/platingcoating/copperplating/index.html
+++ b/products/platingcoating/copperplating/index.html
@@ -315,6 +315,17 @@
           </div>
         </article>
 
+        <!-- Alkaline Non-Cyanide Copper NCC204-->
+        <article id="noncyanide-cu" class="card lift reveal">
+          <picture><img src="https://img5.pic.in.th/file/secure-sv1/thumbnail-1.jpg" alt="Alkaline non-cyanide copper NCC204 – safer alternative with smooth bright finish and throwing power"></picture>
+          <div class="body">
+            <div class="badges"><span class="badge">Alkaline Non-Cyanide</span><span class="badge">Safer / Eco</span></div>
+            <h3 data-i18n-key="ncn_title">Alkaline Non-Cyanide Copper</h3>
+            <p data-i18n-key="ncn_desc1">ความเร็วชุบสูง ช่วงกระแสกว้าง คุมง่าย ทนสิ่งเจือปน ใช้ได้ทั้ง Rack/Barrel และแปลงจากระบบไซยาไนด์เดิมได้</p>
+            <a class="more" href="coppernon-cyanide-ncc204/index.html" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+          </div>
+        </article>
+
         <!-- Acid Copper -->
         <article id="acid-cu" class="card lift reveal">
           <picture><img src="https://img5.pic.in.th/file/secure-sv1/thumbnail-2240c35936a6eea27.jpg" alt="Bright acid copper – high gloss, deep throwing power for thickness build"></picture>
@@ -530,6 +541,7 @@
         cya_desc:"เพิ่มการยึดเกาะของทองแดงบนเหล็ก ทองเหลือง เหล็กผสมตะกั่ว และซิงค์ไดคาสต์ เหมาะเป็นชั้นรองพื้นก่อนชุบนิกเกิล/โครเมียม เคลือบสม่ำเสมอ คุมง่าย ทนกัดกร่อนดี",
         ncn_title:"Alkaline Non-Cyanide Copper",
         ncn_desc:"เลี่ยงไซยาไนด์แต่คงข้อดีของระบบด่าง ให้ผิวเรียบเงา การกระจายตัวดี ลดความเสี่ยงและขั้นตอนบำบัดของเสีย เหมาะกับชิ้นงานหลากหลาย",
+        ncn_desc1:"ความเร็วชุบสูง ช่วงกระแสกว้าง คุมง่าย ทนสิ่งเจือปน ใช้ได้ทั้ง Rack/Barrel และแปลงจากระบบไซยาไนด์เดิมได้",
         acid_title:"Acid Copper Plating",
         acid_desc:"ใช้กับกรดกำมะถัน ให้ความเงาสูง ประสิทธิภาพชุบดี ครอบคลุมมุมลึก เคลือบหนาได้ง่าย ผิวเรียบไร้รูพรุน ยืดหยุ่น ทนกัดกร่อน คุมบ่อและเติมสารง่าย",
         tbl_type:"ประเภท", tbl_use:"การใช้งานหลัก", tbl_feat:"จุดเด่น", tbl_sub:"วัสดุรองรับ", tbl_notes:"หมายเหตุ",
@@ -562,6 +574,7 @@
         cya_desc:"Boosts adhesion on steel, brass, leaded steel, and Zn die-cast; ideal undercoat before Ni/Cr; uniform deposit; easy control; good corrosion resistance.",
         ncn_title:"Alkaline Non-Cyanide Copper",
         ncn_desc:"Avoids cyanide while retaining alkaline benefits; smooth bright finish with good throwing power; reduces risk and waste-treatment steps.",
+        ncn_desc1:"High plating speed, wide current density range, easy control, tolerance to impurities, suitable for both Rack/Barrel applications, and convertible from existing cyanide systems.",
         acid_title:"Acid Copper Plating",
         acid_desc:"Sulfuric-acid system delivering high brightness, deep recess coverage, and easy bath maintenance with low additive consumption.",
         tbl_type:"Type", tbl_use:"Primary use", tbl_feat:"Key features", tbl_sub:"Substrates", tbl_notes:"Notes",
