upload all files

--- a/products/platingcoating/copperplating/coppernon-cyanide-ncc204/index.html
+++ b/products/platingcoating/copperplating/coppernon-cyanide-ncc204/index.html
@@ -360,6 +360,33 @@
 </div>
 </section>
 
+<!-- Purpose -->
+<section id="purpose" class="reveal section-block" aria-labelledby="purpose-h">
+  <h2 id="purpose-h" class="section" data-i18n-key="purpose_h">วัตถุประสงค์</h2>
+  <p class="lead" data-i18n-key="purpose_lead">การชุบทองแดงด่างไร้ไซยาไนด์: ทางเลือกที่ปลอดภัยและมีประสิทธิภาพ</p>
+  <div class="content">
+    <p data-i18n-key="purpose_p1">
+      การชุบทองแดงด่างไร้ไซยาไนด์เป็นกระบวนการชุบด้วยไฟฟ้าที่พัฒนาขึ้นเพื่อทดแทนระบบด่างแบบใช้ไซยาไนด์ ลดความเสี่ยงต่อสุขภาพผู้ปฏิบัติงานและผลกระทบต่อสิ่งแวดล้อม พร้อมทั้งทำให้การบำบัดน้ำเสียง่ายและโปร่งใสมากขึ้น
+    </p>
+
+    <h3 class="section-sub" data-i18n-key="purpose_sub1_h">ปฏิกิริยาแทนที่: ปัญหาสำคัญที่ต้องแก้ไข</h3>
+    <p data-i18n-key="purpose_p2">
+      หากชุบด้วยทองแดงกรดโดยตรงบนเหล็กหรือสังกะสี จะเกิดปฏิกิริยาแทนที่ซึ่งทำให้ไอออนทองแดงถูกลดรูปและเคลือบทันที ขณะที่เหล็กหรือสังกะสีละลายออก ส่งผลให้ชั้นทองแดงก่อตัวโดยไม่อยู่ภายใต้การควบคุมกระแสไฟฟ้า
+    </p>
+    <p data-i18n-key="purpose_p3">
+      ชั้นทองแดงที่เกิดจากปฏิกิริยานี้จะหลวม ยึดเกาะไม่แน่น และไม่สม่ำเสมอ จึงลอกง่ายและไม่เหมาะสำหรับเป็นฐานของการสร้างชั้นเคลือบถัดไป
+    </p>
+
+    <h3 class="section-sub" data-i18n-key="purpose_sub2_h">บทบาทของสารละลายด่างไร้ไซยาไนด์</h3>
+    <p data-i18n-key="purpose_p4">
+      การใช้ชั้นทองแดงด่างไร้ไซยาไนด์ช่วยยับยั้งปฏิกิริยาแทนที่ ทำให้เกิดการตกเคลือบแบบควบคุมด้วยกระแสไฟฟ้า เกิดชั้นรองพื้นทองแดงที่ยึดเกาะแน่นและสม่ำเสมอ
+    </p>
+    <p data-i18n-key="purpose_p5">
+      แนวทางนี้จึงตอบโจทย์ทั้งด้านความปลอดภัยและสิ่งแวดล้อม ไปพร้อมกับการรับรองคุณภาพ ความทนทาน และความสวยงามของผิวชุบในกระบวนการตกแต่งหรือการใช้งานเชิงวิศวกรรมขั้นสุดท้าย
+    </p>
+  </div>
+</section>
+
 <!-- Composition & Operating -->
 <section id="composition" class="reveal section-block" aria-labelledby="comp-h">
   <h2 id="comp-h" class="section" data-i18n-key="comp_h">องค์ประกอบทางเคมี & การทำงาน</h2>
@@ -556,6 +583,16 @@
           feat_6_t:"แปลงจากบ่อไซยาไนด์เดิมได้",
           feat_6_d:"ไม่จำเป็นต้องติดตั้งบ่อใหม่",
 
+      purpose_h: "วัตถุประสงค์",
+      purpose_lead: "การชุบทองแดงด่างไร้ไซยาไนด์: ทางเลือกที่ปลอดภัยและมีประสิทธิภาพ",
+      purpose_p1: "การชุบทองแดงด่างไร้ไซยาไนด์เป็นกระบวนการชุบด้วยไฟฟ้าที่พัฒนาขึ้นเพื่อทดแทนระบบด่างแบบใช้ไซยาไนด์ ลดความเสี่ยงต่อสุขภาพผู้ปฏิบัติงานและผลกระทบต่อสิ่งแวดล้อม พร้อมทั้งทำให้การบำบัดน้ำเสียง่ายและโปร่งใสมากขึ้น",
+      purpose_sub1_h: "ปฏิกิริยาแทนที่: ปัญหาสำคัญที่ต้องแก้ไข",
+      purpose_p2: "หากชุบด้วยทองแดงกรดโดยตรงบนเหล็กหรือสังกะสี จะเกิดปฏิกิริยาแทนที่ซึ่งทำให้ไอออนทองแดงถูกลดรูปและเคลือบทันที ขณะที่เหล็กหรือสังกะสีละลายออก ส่งผลให้ชั้นทองแดงก่อตัวโดยไม่อยู่ภายใต้การควบคุมกระแสไฟฟ้า",
+      purpose_p3: "ชั้นทองแดงที่เกิดจากปฏิกิริยานี้จะหลวม ยึดเกาะไม่แน่น และไม่สม่ำเสมอ จึงลอกง่ายและไม่เหมาะสำหรับเป็นฐานของการสร้างชั้นเคลือบถัดไป",
+      purpose_sub2_h: "บทบาทของสารละลายด่างไร้ไซยาไนด์",
+      purpose_p4: "การใช้ชั้นทองแดงด่างไร้ไซยาไนด์ช่วยยับยั้งปฏิกิริยาแทนที่ ทำให้เกิดการตกเคลือบแบบควบคุมด้วยกระแสไฟฟ้า เกิดชั้นรองพื้นทองแดงที่ยึดเกาะแน่นและสม่ำเสมอ",
+      purpose_p5: "แนวทางนี้จึงตอบโจทย์ทั้งด้านความปลอดภัยและสิ่งแวดล้อม ไปพร้อมกับการรับรองคุณภาพ ความทนทาน และความสวยงามของผิวชุบในกระบวนการตกแต่งหรือการใช้งานเชิงวิศวกรรมขั้นสุดท้าย",
+
           comp_h:"องค์ประกอบทางเคมี & การทำงาน",
           comp_lead:"ช่วงควบคุมและค่าที่เหมาะสมสำหรับ NCC 204",
           comp_th_comp:"สารเคมี / พารามิเตอร์",
@@ -639,6 +676,18 @@
           feat_5_d:"Flexible with common plating hardware.",
           feat_6_t:"Convertible from cyanide baths",
           feat_6_d:"No need to install a new tank.",
+
+      purpose_h: "Purpose",
+      purpose_lead: "Non-cyanide alkaline copper: a safer and effective alternative",
+      purpose_p1: "Non-cyanide alkaline copper plating is an electrolytic process developed to replace cyanide-based alkaline copper, reducing risks to worker health and the environment and simplifying wastewater treatment.",
+      purpose_sub1_h: "Displacement reaction: the key issue to solve",
+      purpose_p2: "Applying acid copper directly to steel or zinc triggers a displacement reaction: copper ions are reduced at the surface while iron or zinc dissolves, producing a film that forms without current control.",
+      purpose_p3: "The resulting copper deposit is loose, poorly adherent, and non-uniform, so it peels easily and is unsuitable as a base for subsequent layers.",
+      purpose_sub2_h: "Role of the non-cyanide alkaline solution",
+      purpose_p4: "A non-cyanide alkaline copper strike suppresses displacement and enables controlled electrodeposition, creating a uniform, tightly adherent undercoat.",
+      purpose_p5: "This approach improves safety and environmental performance while ensuring final finish quality, durability, and appearance for decorative or engineering applications.",
+ 
+
 
           comp_h:"Chemistry & operating parameters",
           comp_lead:"Control ranges and optimal values for NCC 204",
