--- a/products/platingcoating/copperplating/index.html
+++ b/products/platingcoating/copperplating/index.html
@@ -320,7 +320,7 @@
           <picture><img src="https://img5.pic.in.th/file/secure-sv1/thumbnail-1.jpg" alt="Alkaline non-cyanide copper NCC204 – safer alternative with smooth bright finish and throwing power"></picture>
           <div class="body">
             <div class="badges"><span class="badge">Alkaline Non-Cyanide NCC204</span><span class="badge">Safer / Eco</span></div>
-            <h3 data-i18n-key="ncn_title">Alkaline Non-Cyanide Copper</h3>
+            <h3 data-i18n-key="ncn_title">Alkaline Non-Cyanide Copper NCC204</h3>
             <p data-i18n-key="ncn_desc1">ความเร็วชุบสูง ช่วงกระแสกว้าง คุมง่าย ทนสิ่งเจือปน ใช้ได้ทั้ง Rack/Barrel และแปลงจากระบบไซยาไนด์เดิมได้</p>
             <a class="more" href="coppernon-cyanide-ncc204/index.html" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
