upload all files

--- a/products/platingcoating/copperplating/index.html
+++ b/products/platingcoating/copperplating/index.html
@@ -304,12 +304,12 @@
           </div>
         </article>
 
-        <!-- Alkaline Non-Cyanide Copper -->
+        <!-- Alkaline Non-Cyanide Copper Copperlume 220-->
         <article id="noncyanide-cu" class="card lift reveal">
           <picture><img src="https://i.imgur.com/wNkzTxE.jpeg" alt="Alkaline non-cyanide copper – safer alternative with smooth bright finish and throwing power"></picture>
           <div class="body">
-            <div class="badges"><span class="badge">Alkaline Non-Cyanide</span><span class="badge">Safer / Eco</span></div>
-            <h3 data-i18n-key="ncn_title">Alkaline Non-Cyanide Copper</h3>
+            <div class="badges"><span class="badge">Alkaline Non-Cyanide Copperlume 220</span><span class="badge">Safer / Eco</span></div>
+            <h3 data-i18n-key="ncn_title">Alkaline Non-Cyanide Copper Copperlume 220</h3>
             <p data-i18n-key="ncn_desc">เลี่ยงไซยาไนด์แต่คงข้อดีของระบบด่าง ให้ผิวเรียบเงา การกระจายตัวดี ลดความเสี่ยงและขั้นตอนบำบัดของเสีย เหมาะกับชิ้นงานหลากหลาย</p>
             <a class="more" href="troubleshootingcoppernon-cyanide/index.html" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
@@ -320,7 +320,7 @@
           <picture><img src="https://img5.pic.in.th/file/secure-sv1/thumbnail-1.jpg" alt="Alkaline non-cyanide copper NCC204 – safer alternative with smooth bright finish and throwing power"></picture>
           <div class="body">
             <div class="badges"><span class="badge">Alkaline Non-Cyanide NCC204</span><span class="badge">Safer / Eco</span></div>
-            <h3 data-i18n-key="ncn_title">Alkaline Non-Cyanide Copper NCC204</h3>
+            <h3 data-i18n-key="ncn_title1">Alkaline Non-Cyanide Copper NCC204</h3>
             <p data-i18n-key="ncn_desc1">ความเร็วชุบสูง ช่วงกระแสกว้าง คุมง่าย ทนสิ่งเจือปน ใช้ได้ทั้ง Rack/Barrel และแปลงจากระบบไซยาไนด์เดิมได้</p>
             <a class="more" href="coppernon-cyanide-ncc204/index.html" rel="noopener" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
@@ -539,7 +539,8 @@
         btn_details:"ดูรายละเอียด →",
         cya_title:"Alkaline Cyanide Copper",
         cya_desc:"เพิ่มการยึดเกาะของทองแดงบนเหล็ก ทองเหลือง เหล็กผสมตะกั่ว และซิงค์ไดคาสต์ เหมาะเป็นชั้นรองพื้นก่อนชุบนิกเกิล/โครเมียม เคลือบสม่ำเสมอ คุมง่าย ทนกัดกร่อนดี",
-        ncn_title:"Alkaline Non-Cyanide Copper",
+        ncn_title:"Alkaline Non-Cyanide Copper Copperlume 220",
+        ncn_title1:"Alkaline Non-Cyanide Copper NCC204",
         ncn_desc:"เลี่ยงไซยาไนด์แต่คงข้อดีของระบบด่าง ให้ผิวเรียบเงา การกระจายตัวดี ลดความเสี่ยงและขั้นตอนบำบัดของเสีย เหมาะกับชิ้นงานหลากหลาย",
         ncn_desc1:"ความเร็วชุบสูง ช่วงกระแสกว้าง คุมง่าย ทนสิ่งเจือปน ใช้ได้ทั้ง Rack/Barrel และแปลงจากระบบไซยาไนด์เดิมได้",
         acid_title:"Acid Copper Plating",
@@ -572,7 +573,8 @@
         btn_details:"View details →",
         cya_title:"Alkaline Cyanide Copper",
         cya_desc:"Boosts adhesion on steel, brass, leaded steel, and Zn die-cast; ideal undercoat before Ni/Cr; uniform deposit; easy control; good corrosion resistance.",
-        ncn_title:"Alkaline Non-Cyanide Copper",
+        ncn_title:"Alkaline Non-Cyanide Copper Copperlume 220",
+        ncn_title1:"Alkaline Non-Cyanide Copper NCC204",
         ncn_desc:"Avoids cyanide while retaining alkaline benefits; smooth bright finish with good throwing power; reduces risk and waste-treatment steps.",
         ncn_desc1:"High plating speed, wide current density range, easy control, tolerance to impurities, suitable for both Rack/Barrel applications, and convertible from existing cyanide systems.",
         acid_title:"Acid Copper Plating",
