upload all files

--- a/products/platingcoating/nickelplating/troubleshootingnickel/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingnickel/index.html
@@ -284,7 +284,7 @@
           <article class="features__item">
             <div class="features__icon" aria-hidden="true">✨</div>
             <h3 class="features__title" data-i18n-key="feat_1_t">เงาสูงทั่วช่วงกระแส</h3>
-            <p class="features__desc" data-i18n-key="feat_1_d">ตั้งแต่ <strong>LCD ถึง HCD</strong> ให้ผิวเงาเนียน สม่ำเสมอ</p>
+            <p class="features__desc" data-i18n-key="feat_1_d">ตั้งแต่ไฟต่ำจนถึงไฟสูงให้ผิวเงาเนียน สม่ำเสมอ</p>
           </article>
 
           <article class="features__item">
@@ -538,7 +538,7 @@
       features_h: "จุดเด่นของน้ำยา",
       features_lead: "สรุปคุณสมบัติสำคัญสำหรับไลน์ชุบ ทั้งคุณภาพผิว ความเสถียร และความพร้อมต่อกระบวนการถัดไป",
       feat_1_t: "เงาสูงทั่วช่วงกระแส",
-      feat_1_d: "ตั้งแต่ <strong>LCD ถึง HCD</strong> ให้ผิวเงาเนียน สม่ำเสมอ",
+      feat_1_d: "ตั้งแต่ไฟต่ำจนถึงไฟสูงให้ผิวเงาเนียน สม่ำเสมอ",
       feat_2_t: "ครอบคลุมซอกลึก",
       feat_2_d: "การกระจายตัวดีเยี่ยม บริเวณรู/ร่องลึกเคลือบได้ทั่วถึง",
       feat_3_t: "ฐานทนกัดกร่อน",
