--- a/products.html
+++ b/products.html
@@ -536,7 +536,12 @@ const PRODUCTS = [
     img:"https://i.imgur.com/QfsLZ0I.jpeg",
     href:"products/pretreatment/index.html",
     mail:"mailto:contact@baumechemical.com?subject=ขอใบเสนอราคา: เคมีล้างผิวงาน",
-    tds:"https://www.baumechemical.com/docs/tds/soakcleanb1.pdf",
+    tds: [
+  { label: "TDS Acid Degreaser", href: "https://www.baumechemical.com/docs/tds/acidclean105.pdf" },
+  { label: "TDS Alkaline Degreaser", href: "https://www.baumechemical.com/docs/tds/soakcleanb1.pdf" },
+  { label: "TDS Electro Degreaser", href: "https://www.baumechemical.com/docs/tds/degreaser-e60.pdf" },
+  { label: "TDS Ultrasonic Cleaner", href: "https://www.baumechemical.com/docs/tds/cleaner3388.pdf" }
+],
     specs:{ph:"Acid 1-3 Alkaline 10-13 ", temp:"60-80", current:"3-10 A/dm²"}
   },
   {
@@ -549,7 +554,15 @@ const PRODUCTS = [
     img:"https://i.imgur.com/DzCh11Q.jpeg",
     href:"products/platingcoating/index.html",
     mail:"mailto:contact@baumechemical.com?subject=ขอใบเสนอราคา: น้ำยาชุบโลหะ",
-    tds:"https://www.baumechemical.com/docs/tds/metal-plating.pdf",
+    tds: [
+  { label: "TDS Zinc Plating", href: "https://www.baumechemical.com/docs/tds/111b.pdf" },
+  { label: "TDS Nickel Plating", href: "https://www.baumechemical.com/docs/tds/a-brite.pdf" },
+  { label: "TDS Copper Plating", href: "https://www.baumechemical.com/docs/tds/copper900.pdf" },
+  { label: "TDS Brass Plating", href: "https://www.baumechemical.com/docs/tds/brass-salt.pdf" },
+  { label: "TDS Electrolytic Lacquer", href: "https://www.baumechemical.com/docs/tds/2020.pdf" },
+  { label: "TDS Cyanide-Free White Bronze", href: "https://www.baumechemical.com/docs/tds/317m.pdf" },
+  { label: "TDS Bright Tin Plating", href: "https://www.baumechemical.com/docs/tds/4140.pdf" }
+],
     specs:{ph:"-", temp:"-", current:"-"}
   },
   {
@@ -698,7 +711,15 @@ const tagsStr = p => [...(p.tags?.th||[]), ...(p.tags?.en||[])].join(' ');
 /* ========== RENDER CARD (ไม่มี SDS) ========== */
 function cardHTML(p, q=""){
   const sw = (p.swatches||[]).map(c=>`<span class="swatch" style="background:${c}"></span>`).join('');
-  const tds = p.tds ? `<a class="btn ghost" target="_blank" rel="noopener" href="${p.tds}">TDS</a>` : '';
+
+  const tdsBtns = Array.isArray(p.tds)
+    ? p.tds.map(item=>{
+        const href  = (typeof item === 'string') ? item : item.href;
+        const label = (typeof item === 'object' && item.label) ? item.label : 'TDS';
+        return `<a class="btn ghost" target="_blank" rel="noopener" href="${href}" aria-label="${label}">${label}</a>`;
+      }).join('')
+    : (p.tds ? `<a class="btn ghost" target="_blank" rel="noopener" href="${p.tds}" aria-label="TDS">TDS</a>` : '');
+
   return `
   <article class="card" data-id="${p.id}" data-cat="${p.cat}">
     <button class="quick" data-id="${p.id}" aria-label="${t('btn_quickview')}">${t('btn_quickview')}</button>
@@ -711,7 +732,7 @@ function cardHTML(p, q=""){
       <div class="actions">
         <a class="btn" href="${p.href}" target="_blank" rel="noopener">${t('btn_details')}</a>
         <a class="btn ghost" href="${p.mail}">${t('btn_quote')}</a>
-        ${tds}
+        ${tdsBtns}
       </div>
     </div>
   </article>`;
@@ -809,18 +830,26 @@ function applyFilters(){
 function openModal(p){
   $('#modalImg').style.backgroundImage = `url('${p.img}')`;
   $('#modalTitle').textContent = nameOf(p);
-  $('#modalDesc').textContent = descOf(p);
-  $('#modalBadges').innerHTML = `<span class="badge">${p.cat[0].toUpperCase()+p.cat.slice(1)}</span>`;
+  $('#modalDesc').textContent  = descOf(p);
+  $('#modalBadges').innerHTML  = `<span class="badge">${p.cat[0].toUpperCase()+p.cat.slice(1)}</span>`;
   const c = p.specs || {};
   $('#modalChips').innerHTML = `
     <span class="chip">pH: ${c.ph ?? '—'}</span>
     <span class="chip">${t('chip_temp_label')}: ${c.temp ?? '—'}</span>
     <span class="chip">${t('chip_current_label')}: ${c.current ?? '—'}</span>`;
-  const tds = p.tds ? `<a class="btn ghost" target="_blank" rel="noopener" href="${p.tds}">TDS</a>` : '';
+
+  const tdsBtns = Array.isArray(p.tds)
+    ? p.tds.map(item=>{
+        const href  = (typeof item === 'string') ? item : item.href;
+        const label = (typeof item === 'object' && item.label) ? item.label : 'TDS';
+        return `<a class="btn ghost" target="_blank" rel="noopener" href="${href}" aria-label="${label}">${label}</a>`;
+      }).join('')
+    : (p.tds ? `<a class="btn ghost" target="_blank" rel="noopener" href="${p.tds}" aria-label="TDS">TDS</a>` : '');
+
   $('#modalActions').innerHTML = `
     <a class="btn" target="_blank" rel="noopener" href="${p.href}">${t('btn_details')}</a>
     <a class="btn ghost" href="${p.mail}">${t('btn_quote')}</a>
-    ${tds}`;
+    ${tdsBtns}`;
   const bd = $('#modalBackdrop'); bd.style.display='flex'; bd.setAttribute('aria-hidden','false');
 }
 function closeModal(){ const bd = $('#modalBackdrop'); bd.style.display='none'; bd.setAttribute('aria-hidden','true'); }
