upload all files

--- a/products.html
+++ b/products.html
@@ -575,7 +575,12 @@ const PRODUCTS = [
     img:"https://img2.pic.in.th/pic/thumbnail85e2847383c30223.jpg",
     href:"products/blackening/index.html",
     mail:"mailto:contact@baumechemical.com?subject=ขอใบเสนอราคา: น้ำยารมดำ",
-    tds:"https://www.baumechemical.com/docs/tds/blackening.pdf",
+    tds: [
+  { label: "TDS Blackening for Brass & Copper", href: "https://www.baumechemical.com/docs/tds/bk.pdf" },
+  { label: "TDS Blackening for Steel", href: "https://www.baumechemical.com/docs/tds/autoblack.pdf" },
+  { label: "TDS Blackening for Steel", href: "https://www.baumechemical.com/docs/tds/alublack.pdf" },
+  { label: "TDS Patina", href: "https://www.baumechemical.com/docs/tds/patina.pdf" }
+],
     specs:{ph:"2-5", temp:"Room temperature", current:"—"}
   },
   {
